# app/api/docs/space/space.swagger.yaml
@@ -6,7 +6,7 @@ info:
     title: ""
     version: 0.0.1
 paths:
-    /page/createPage:
+    /space/createPage:
         post:
             tags:
                 - 空间
@@ -29,7 +29,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TCreatePageResp'
-    /page/createPageLink:
+    /space/createPageLink:
         post:
             tags:
                 - 页面
@@ -53,7 +53,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TCreatePageLinkResp'
-    /page/createTmpPage:
+    /space/createTmpPage:
         post:
             tags:
                 - 页面
@@ -77,7 +77,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TCreateTmpPageResp'
-    /page/deletePage:
+    /space/deletePage:
         post:
             tags:
                 - 页面
@@ -97,7 +97,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TDeletePageResp'
-    /page/getMySpace:
+    /space/getMySpace:
         post:
             tags:
                 - 空间
@@ -119,7 +119,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TGetMySpaceResp'
-    /page/getPage:
+    /space/getPage:
         post:
             tags:
                 - 页面
@@ -138,7 +138,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TGetPageResp'
-    /page/removePageLink:
+    /space/getUserInfo:
+        post:
+            tags:
+                - SpaceService
+            operationId: SpaceService_GetUserInfo
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.GetUserInfoReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/.TGetUserInfoResp'
+    /space/removePageLink:
         post:
             tags:
                 - 页面
@@ -158,7 +176,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TRemovePageLinkResp'
-    /page/savePageIds:
+    /space/savePageIds:
         post:
             tags:
                 - 空间
@@ -180,7 +198,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TSavePageIdsResp'
-    /page/updatePage:
+    /space/updatePage:
         post:
             tags:
                 - 页面
@@ -208,7 +226,7 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/.Link'
-                    description: 文件夹中有多个链接
+                    description: 每个文件夹里，有多个链接
         .CreatePageLinkReq:
             required:
                 - page_id
@@ -321,6 +339,55 @@ components:
             properties:
                 page:
                     $ref: '#/components/schemas/.Page'
+        .GetUserInfoReq:
+            type: object
+            properties:
+                uid:
+                    type: integer
+                    description: 用户id
+                    format: int64
+        .GetUserInfoResp:
+            type: object
+            properties:
+                uid:
+                    type: integer
+                    description: 用户id
+                    format: int64
+                display_name:
+                    type: string
+                    description: 展示名称
+                username:
+                    type: string
+                    description: 用户名
+                avatar:
+                    type: string
+                    description: 用户头像
+                email:
+                    type: string
+                    description: 用户邮箱
+                status:
+                    type: integer
+                    description: 用户状态 normal 0,suspended 2,deleted 4
+                    format: int32
+                last_login_time:
+                    type: integer
+                    description: 上一次登录时间
+                    format: int64
+                is_admin:
+                    type: integer
+                    description: 是否是管理员 0:普通用户 1:管理员
+                    format: int32
+                provider:
+                    type: string
+                    description: 账号注册来源
+                create_time:
+                    type: integer
+                    description: 用户创建时间
+                    format: int64
+                update_time:
+                    type: integer
+                    description: 用户更新时间
+                    format: int64
         .Link:
             required:
                 - title
@@ -328,15 +395,18 @@ components:
             properties:
                 title:
                     type: string
+                    description: 链接的展示的标题
                 url:
                     type: string
+                    description: 链接的地址
                 tags:
                     type: array
                     items:
                         type: string
+                    description: 链接的标签
                 photo_url:
                     type: string
-                    description: 暂不支持
+                    description: 链接的图标地址(暂不支持)
                 sub_links:
                     type: array
                     items:
@@ -359,7 +429,7 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/.Collections'
-                    description: 文件夹
+                    description: 有一堆文件夹
                 version:
                     type: integer
                     description: 版本号，从0递增，当修改时需要传入该值
@@ -460,10 +530,10 @@ components:
         .SubLink:
             type: object
             properties:
-                corner:
+                sub_title:
                     type: string
-                    description: 右上角角标
-                url:
+                    description: 展示的文字
+                sub_url:
                     type: string
                     description: 链接
         .TCreatePageLinkResp:
@@ -550,6 +620,20 @@ components:
                     type: string
                 data:
                     $ref: '#/components/schemas/.GetPageResp'
+        .TGetUserInfoResp:
+            required:
+                - code
+                - msg
+                - data
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                msg:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/.GetUserInfoResp'
         .TRemovePageLinkResp:
             required:
                 - code
