# app/api/login/login_http_client.pb.go
@@ -20,7 +20,6 @@ type LoginServiceHTTPClient interface {
 	Connector(context.Context, *ConnectorReq, ...calloption.CallOption) (*TResponse[ConnectorResp], error)
 	// 第三方登录回调
 	ConnectorCallback(context.Context, *ConnectorCallbackReq, ...calloption.CallOption) (*TResponse[ConnectorCallbackResp], error)
-	GetUserInfo(context.Context, *GetUserInfoReq, ...calloption.CallOption) (*TResponse[GetUserInfoResp], error)
 }
 
 type LoginServiceHTTPClientImpl struct {
@@ -38,19 +37,4 @@ func (c *LoginServiceHTTPClientImpl) Connector(ctx context.Context, req *Connect
 func (c *LoginServiceHTTPClientImpl) ConnectorCallback(ctx context.Context, req *ConnectorCallbackReq, opts ...calloption.CallOption) (*TResponse[ConnectorCallbackResp], error) {
 	// TODO: GET method not support
 	return nil, ecode.NewV2(-1, "GET method not support")
-}
-func (c *LoginServiceHTTPClientImpl) GetUserInfo(ctx context.Context, req *GetUserInfoReq, opts ...calloption.CallOption) (*TResponse[GetUserInfoResp], error) {
-	resp := &TResponse[GetUserInfoResp]{}
-	r := c.hh.Client.R().SetContext(ctx)
-	for _, opt := range opts {
-		opt(r)
-	}
-	_, err := r.SetBody(req).SetResult(resp).Post("/page/getUserInfo")
-	if err != nil {
-		return nil, err
-	}
-	if resp.Code != 1 {
-		err = ecode.NewV2(int(resp.Code), resp.Msg)
-	}
-	return resp, err
 }
