# app/api/login/login_http_server.pb.go
@@ -18,14 +18,12 @@ type LoginServiceHTTPServer interface {
 	Connector(*api.Context, *ConnectorReq) (*ConnectorResp, error)
 	// 第三方登录回调
 	ConnectorCallback(*api.Context, *ConnectorCallbackReq) (*ConnectorCallbackResp, error)
-	GetUserInfo(*api.Context, *GetUserInfoReq) (*GetUserInfoResp, error)
 }
 
 func RegisterLoginServiceHTTPServer(s *gin.Engine, srv LoginServiceHTTPServer) {
 	r := s.Group("/")
 	r.GET("/login/connector/auth/:name", _LoginService_Connector_HTTP_Handler(srv))             // 连接器登录，跳转鉴权的url
 	r.GET("/login/connector/callback/:name", _LoginService_ConnectorCallback_HTTP_Handler(srv)) // 第三方登录回调
-	r.POST("/page/getUserInfo", _LoginService_GetUserInfo_HTTP_Handler(srv))
 }
 
 func _LoginService_Connector_HTTP_Handler(srv LoginServiceHTTPServer) func(g *gin.Context) {
@@ -68,22 +66,6 @@ func _LoginService_ConnectorCallback_HTTP_Handler(srv LoginServiceHTTPServer) fu
 			return
 		}
 		resp, err := srv.ConnectorCallback(&ctx, req)
-		setRetJSON(&ctx, resp, err)
-	}
-}
-
-func _LoginService_GetUserInfo_HTTP_Handler(srv LoginServiceHTTPServer) func(g *gin.Context) {
-	return func(g *gin.Context) {
-		req := &GetUserInfoReq{}
-		var err error
-		ctx := api.NewContext(g)
-		err = parseReq(&ctx, req)
-		err = checkValidate(err)
-		if err != nil {
-			setRetJSON(&ctx, nil, err)
-			return
-		}
-		resp, err := srv.GetUserInfo(&ctx, req)
 		setRetJSON(&ctx, resp, err)
 	}
 }
