# app/api/space/space_json.pb.go
@@ -10,6 +10,38 @@ import (
 	sonic "github.com/bytedance/sonic"
 )
 
+func (m *GetUserInfoReq) Marshal() ([]byte, error) {
+	return sonic.Marshal(m)
+}
+
+func (m *GetUserInfoReq) MarshalString() (string, error) {
+	return sonic.MarshalString(m)
+}
+
+func (m *GetUserInfoReq) Unmarshal(buf []byte) error {
+	return sonic.Unmarshal(buf, m)
+}
+
+func (m *GetUserInfoReq) UnmarshalString(str string) error {
+	return sonic.UnmarshalString(str, m)
+}
+
+func (m *GetUserInfoResp) Marshal() ([]byte, error) {
+	return sonic.Marshal(m)
+}
+
+func (m *GetUserInfoResp) MarshalString() (string, error) {
+	return sonic.MarshalString(m)
+}
+
+func (m *GetUserInfoResp) Unmarshal(buf []byte) error {
+	return sonic.Unmarshal(buf, m)
+}
+
+func (m *GetUserInfoResp) UnmarshalString(str string) error {
+	return sonic.UnmarshalString(str, m)
+}
+
 func (m *CreateTmpPageReq) Marshal() ([]byte, error) {
 	return sonic.Marshal(m)
 }
